--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^4.1.16",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.32.13"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
