--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@prismicio/client": "^4.0.0",
     "framer-motion": "^4.1.16",
     "next": "10.2.0",
     "react": "17.0.2",
