--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prismicio/client": "^4.0.0",
     "framer-motion": "^4.1.16",
     "next": "10.2.0",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.5",
     "typescript": "^4.2.4"
   }
