--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.16",
     "next": "10.2.0",
     "prismic-dom": "^2.2.5",
+    "prismic-reactjs": "^1.3.3",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
