--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.13"
   },
   "devDependencies": {
