--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.6.1",
     "@prismicio/client": "^4.0.0",
     "axios": "^0.21.1",
     "date-fns": "^2.21.3",
@@ -21,9 +22,12 @@
     "prismic-reactjs": "^1.3.3",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.1",
     "react-icons": "^4.2.0",
     "react-syntax-highlighter": "^15.4.3",
-    "sass": "^1.32.13"
+    "react-toastify": "^7.0.4",
+    "sass": "^1.32.13",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
